[package]
name = "aoc"
description = "Solver for Advent of Code 2022"
authors = ["Eric Trexel <etrexel1@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.22", features = ["derive"] }
