[package]
name = "aoc"
description = "Solver for Advent of Code 2022"
authors = ["Eric Trexel <etrexel1@gmail.com>"]
version = "0.1.0"
edition = "2021"

[lib]
name = "aoc"
path = "src/lib.rs"

[[bin]]
name = "aoc"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.29", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.7"
predicates = "2.1.4"
